@@ -10,7 +10,7 @@ public class ResourceNotFoundException extends RuntimeException{
       }
 
       public ResourceNotFoundException(String resourceName, String fieldName, Long fieldValue) {
-        super(String.format("%s not found with %s : '%s'", resourceName, fieldName, fieldValue));
+        super("%s not found with %s : '%s'".formatted(resourceName, fieldName, fieldValue));
     }
     
 }
